regression/fail/modules.45.sml
signature S =
   sig
      type 'a t
   end where type 'a t = int * 'b
